AG-8094 - Fix post bootstrap svg/icon alignment issues

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/elements/_block.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/elements/_block.scss
@@ -46,6 +46,11 @@ hr {
     border: 0;
 }
 
+svg {
+    overflow: hidden;
+    vertical-align: middle;
+}
+
 address {
     font-style: inherit;
     line-height: inherit;
